--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.jcgay.log4j</groupId>
     <artifactId>log4j-color</artifactId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -14,7 +14,7 @@
         <url>https://github.com/jcgay/log4j-color.git</url>
         <connection>scm:git:git://github.com/jcgay/log4j-color.git</connection>
         <developerConnection>scm:git:git@github.com:jcgay/log4j-color.git</developerConnection>
-      <tag>v0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
