--- a/pom.xml
+++ b/pom.xml
@@ -1,32 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.jcgay.log4j</groupId>
-    <artifactId>log4j-color</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <parent>
+        <groupId>fr.jcgay.maven</groupId>
+        <artifactId>jcgay-build-configuration</artifactId>
+        <version>1.1</version>
+    </parent>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <groupId>fr.jcgay.log4j</groupId>
+    <artifactId>log4j-color</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <inceptionYear>2013</inceptionYear>
+    <url>https://github.com/jcgay/log4j-color</url>
 
     <scm>
         <url>https://github.com/jcgay/log4j-color.git</url>
         <connection>scm:git:git://github.com/jcgay/log4j-color.git</connection>
         <developerConnection>scm:git:git@github.com:jcgay/log4j-color.git</developerConnection>
-      <tag>HEAD</tag>
-  </scm>
-
-    <distributionManagement>
-        <repository>
-            <id>jcgay-cloudbees-release</id>
-            <url>dav:https://repository-jcgay.forge.cloudbees.com/release/</url>
-        </repository>
-        <snapshotRepository>
-            <id>jcgay-cloudbees-snapshot</id>
-            <url>dav:https://repository-jcgay.forge.cloudbees.com/snapshot/</url>
-        </snapshotRepository>
-    </distributionManagement>
+        <tag>HEAD</tag>
+    </scm>
 
     <dependencies>
         <dependency>
@@ -63,50 +58,10 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.14</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <tagNameFormat>v@{project.version}</tagNameFormat>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9</version>
-            </plugin>
-            <plugin>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.7</version>
             </plugin>
             <plugin>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -121,12 +76,5 @@
                 </executions>
             </plugin>
         </plugins>
-        <extensions>
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-webdav-jackrabbit</artifactId>
-                <version>2.2</version>
-            </extension>
-        </extensions>
     </build>
 </project>
