[maven-release-plugin] prepare release v1.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -11,7 +10,7 @@
 
     <groupId>fr.jcgay.log4j</groupId>
     <artifactId>log4j-color</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <inceptionYear>2013</inceptionYear>
     <url>https://github.com/jcgay/log4j-color</url>
@@ -20,7 +19,7 @@
         <url>https://github.com/jcgay/log4j-color.git</url>
         <connection>scm:git:git://github.com/jcgay/log4j-color.git</connection>
         <developerConnection>scm:git:git@github.com:jcgay/log4j-color.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>v1.0</tag>
     </scm>
 
     <dependencies>
